# fylr-ingestors

ingestors/text-python-1/: .env.example  pyproject.toml  requirements.txt
ingestors/text-python-1/src/: main.py
ingestors/text-python-1/src/handlers/: __init__.py  markdown.py
